--- a/terror_data.ipynb
+++ b/terror_data.ipynb
@@ -14,20 +14,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6575878b-27bb-475c-bdcf-8c87ce7fa19b",
+   "execution_count": 32,
+   "id": "8b219f0d-ef95-49f2-9d48-c938b3cb2ab6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read xlsx file into a dataframe\n",
-    "filepath = \"Nigeria_terrorist_data.xlsx\"\n",
-    "df = pd.read_excel(filepath)"
+    "#Read and Wrangle data\n",
+    "def wrangle(filepath):\n",
+    "\n",
+    "    #read excel into a dataframe\n",
+    "    df = pd.read_excel(filepath)\n",
+    "    #drop missing values\n",
+    "    df.dropna(inplace=True)\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f2adcbb3-bc8b-43e1-afde-44f21f352795",
+   "execution_count": 33,
+   "id": "495353bf-bb8d-428f-b2e0-ce5a3b5fbe7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (4220, 21)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 4220 entries, 0 to 5997\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   eventid          4220 non-null   int64  \n",
+      " 1   iyear            4220 non-null   int64  \n",
+      " 2   imonth           4220 non-null   int64  \n",
+      " 3   iday             4220 non-null   int64  \n",
+      " 4   country_txt      4220 non-null   object \n",
+      " 5   region_txt       4220 non-null   object \n",
+      " 6   provstate        4220 non-null   object \n",
+      " 7   city             4220 non-null   object \n",
+      " 8   latitude         4220 non-null   float64\n",
+      " 9   longitude        4220 non-null   float64\n",
+      " 10  success          4220 non-null   int64  \n",
+      " 11  suicide          4220 non-null   int64  \n",
+      " 12  attacktype1      4220 non-null   int64  \n",
+      " 13  attacktype1_txt  4220 non-null   object \n",
+      " 14  targtype1        4220 non-null   int64  \n",
+      " 15  targtype1_txt    4220 non-null   object \n",
+      " 16  gname            4220 non-null   object \n",
+      " 17  weaptype1        4220 non-null   int64  \n",
+      " 18  weaptype1_txt    4220 non-null   object \n",
+      " 19  nkill            4220 non-null   float64\n",
+      " 20  nwound           4220 non-null   float64\n",
+      "dtypes: float64(4), int64(9), object(8)\n",
+      "memory usage: 725.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = wrangle(\"Nigeria_terrorist_data.xlsx\")\n",
+    "print(\"Shape:\", df.shape)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "093d658f-7bd4-4df5-8de8-2a247da92a11",
    "metadata": {},
    "outputs": [
     {
@@ -100,41 +154,41 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>198001170007</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Kaduna</td>\n",
-       "      <td>Kaduna</td>\n",
-       "      <td>10.530204</td>\n",
-       "      <td>7.437338</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Government (Diplomatic)</td>\n",
-       "      <td>Zimbabwe Patriotic Front</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>198311110001</td>\n",
+       "      <th>3</th>\n",
+       "      <td>198311270001</td>\n",
        "      <td>1983</td>\n",
        "      <td>11</td>\n",
-       "      <td>11</td>\n",
+       "      <td>27</td>\n",
        "      <td>Nigeria</td>\n",
        "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>6.618911</td>\n",
+       "      <td>3.305532</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Assassination</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Government (General)</td>\n",
+       "      <td>Gang</td>\n",
+       "      <td>13</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>198311290002</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>11</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>6.455641</td>\n",
+       "      <td>3.429865</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -142,102 +196,109 @@
        "      <td>2</td>\n",
        "      <td>Government (General)</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>198801230002</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>6.618911</td>\n",
+       "      <td>3.305532</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Assassination</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Government (Diplomatic)</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>198803130003</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>Sub-Saharan Africa</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>6.618911</td>\n",
+       "      <td>3.305532</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Assassination</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Educational Institution</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 21 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        eventid  iyear  imonth  iday country_txt          region_txt  \\\n",
        "0  197602130003   1976       2    13     Nigeria  Sub-Saharan Africa   \n",
-       "1  198001170007   1980       1    17     Nigeria  Sub-Saharan Africa   \n",
-       "2  198311110001   1983      11    11     Nigeria  Sub-Saharan Africa   \n",
+       "3  198311270001   1983      11    27     Nigeria  Sub-Saharan Africa   \n",
+       "4  198311290002   1983      11    29     Nigeria  Sub-Saharan Africa   \n",
+       "5  198801230002   1988       1    23     Nigeria  Sub-Saharan Africa   \n",
+       "6  198803130003   1988       3    13     Nigeria  Sub-Saharan Africa   \n",
        "\n",
-       "  provstate     city   latitude  longitude  ...  suicide  attacktype1  \\\n",
-       "0     Lagos    Lagos   6.452331   3.419044  ...        0            1   \n",
-       "1    Kaduna   Kaduna  10.530204   7.437338  ...        0            9   \n",
-       "2   Unknown  Unknown        NaN        NaN  ...        0            1   \n",
+       "  provstate   city  latitude  longitude  ...  suicide  attacktype1  \\\n",
+       "0     Lagos  Lagos  6.452331   3.419044  ...        0            1   \n",
+       "3     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
+       "4     Lagos  Lagos  6.455641   3.429865  ...        0            1   \n",
+       "5     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
+       "6     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
        "\n",
-       "   attacktype1_txt targtype1            targtype1_txt  \\\n",
-       "0    Assassination         2     Government (General)   \n",
-       "1          Unknown         7  Government (Diplomatic)   \n",
-       "2    Assassination         2     Government (General)   \n",
+       "   attacktype1_txt targtype1            targtype1_txt          gname  \\\n",
+       "0    Assassination         2     Government (General)  Coup plotters   \n",
+       "3    Assassination         2     Government (General)           Gang   \n",
+       "4    Assassination         2     Government (General)        Unknown   \n",
+       "5    Assassination         7  Government (Diplomatic)        Unknown   \n",
+       "6    Assassination         8  Educational Institution        Unknown   \n",
        "\n",
-       "                      gname weaptype1  weaptype1_txt nkill  nwound  \n",
-       "0             Coup plotters         5       Firearms   3.0     1.0  \n",
-       "1  Zimbabwe Patriotic Front        13        Unknown   NaN     NaN  \n",
-       "2                   Unknown        13        Unknown   0.0     1.0  \n",
+       "  weaptype1  weaptype1_txt nkill  nwound  \n",
+       "0         5       Firearms   3.0     1.0  \n",
+       "3        13        Unknown   1.0     0.0  \n",
+       "4         5       Firearms   0.0     1.0  \n",
+       "5         5       Firearms   1.0     0.0  \n",
+       "6         5       Firearms   3.0     0.0  \n",
        "\n",
-       "[3 rows x 21 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#print  dataframe\n",
-    "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "81657c11-3ad2-4dfb-9d5a-4eee5a90c956",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5998 entries, 0 to 5997\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   eventid          5998 non-null   int64  \n",
-      " 1   iyear            5998 non-null   int64  \n",
-      " 2   imonth           5998 non-null   int64  \n",
-      " 3   iday             5998 non-null   int64  \n",
-      " 4   country_txt      5998 non-null   object \n",
-      " 5   region_txt       5998 non-null   object \n",
-      " 6   provstate        5998 non-null   object \n",
-      " 7   city             5998 non-null   object \n",
-      " 8   latitude         5950 non-null   float64\n",
-      " 9   longitude        5950 non-null   float64\n",
-      " 10  success          5998 non-null   int64  \n",
-      " 11  suicide          5998 non-null   int64  \n",
-      " 12  attacktype1      5998 non-null   int64  \n",
-      " 13  attacktype1_txt  5998 non-null   object \n",
-      " 14  targtype1        5998 non-null   int64  \n",
-      " 15  targtype1_txt    5998 non-null   object \n",
-      " 16  gname            5998 non-null   object \n",
-      " 17  weaptype1        5998 non-null   int64  \n",
-      " 18  weaptype1_txt    5998 non-null   object \n",
-      " 19  nkill            5441 non-null   float64\n",
-      " 20  nwound           4301 non-null   float64\n",
-      "dtypes: float64(4), int64(9), object(8)\n",
-      "memory usage: 984.2+ KB\n",
-      "The shape of the dataframe is : (5998, 21)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#check info\n",
-    "df.info()\n",
-    "print(\"The shape of the dataframe is :\", df.shape)"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b219f0d-ef95-49f2-9d48-c938b3cb2ab6",
+   "id": "4c3fac8c-fbbe-4d2d-a4c1-12a86852d497",
    "metadata": {},
    "outputs": [],
    "source": []
