--- a/terror_data.ipynb
+++ b/terror_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "73dab0ee-fa7b-4a23-9ed4-709f766c3cc3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "id": "8b219f0d-ef95-49f2-9d48-c938b3cb2ab6",
    "metadata": {},
    "outputs": [],
@@ -26,13 +26,20 @@
     "    df = pd.read_excel(filepath)\n",
     "    #drop missing values\n",
     "    df.dropna(inplace=True)\n",
+    "    #drop columns\n",
+    "    drop_cols = [\n",
+    "        'eventid', 'iyear', 'imonth', 'iday', 'country_txt', 'region_txt', \n",
+    "        'provstate', 'city', 'latitude', 'longitude', 'attacktype1_txt', \n",
+    "        'targtype1_txt', 'weaptype1_txt', 'gname', 'nwound'\n",
+    "    ]\n",
+    "    df.drop(columns=drop_cols, inplace=True)\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "id": "495353bf-bb8d-428f-b2e0-ce5a3b5fbe7c",
    "metadata": {},
    "outputs": [
@@ -40,35 +47,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape: (4220, 21)\n",
+      "Shape: (4220, 6)\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 4220 entries, 0 to 5997\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   eventid          4220 non-null   int64  \n",
-      " 1   iyear            4220 non-null   int64  \n",
-      " 2   imonth           4220 non-null   int64  \n",
-      " 3   iday             4220 non-null   int64  \n",
-      " 4   country_txt      4220 non-null   object \n",
-      " 5   region_txt       4220 non-null   object \n",
-      " 6   provstate        4220 non-null   object \n",
-      " 7   city             4220 non-null   object \n",
-      " 8   latitude         4220 non-null   float64\n",
-      " 9   longitude        4220 non-null   float64\n",
-      " 10  success          4220 non-null   int64  \n",
-      " 11  suicide          4220 non-null   int64  \n",
-      " 12  attacktype1      4220 non-null   int64  \n",
-      " 13  attacktype1_txt  4220 non-null   object \n",
-      " 14  targtype1        4220 non-null   int64  \n",
-      " 15  targtype1_txt    4220 non-null   object \n",
-      " 16  gname            4220 non-null   object \n",
-      " 17  weaptype1        4220 non-null   int64  \n",
-      " 18  weaptype1_txt    4220 non-null   object \n",
-      " 19  nkill            4220 non-null   float64\n",
-      " 20  nwound           4220 non-null   float64\n",
-      "dtypes: float64(4), int64(9), object(8)\n",
-      "memory usage: 725.3+ KB\n"
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   success      4220 non-null   int64  \n",
+      " 1   suicide      4220 non-null   int64  \n",
+      " 2   attacktype1  4220 non-null   int64  \n",
+      " 3   targtype1    4220 non-null   int64  \n",
+      " 4   weaptype1    4220 non-null   int64  \n",
+      " 5   nkill        4220 non-null   float64\n",
+      "dtypes: float64(1), int64(5)\n",
+      "memory usage: 230.8 KB\n"
      ]
     }
    ],
@@ -80,8 +72,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "093d658f-7bd4-4df5-8de8-2a247da92a11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>success</th>\n",
+       "      <th>suicide</th>\n",
+       "      <th>attacktype1</th>\n",
+       "      <th>targtype1</th>\n",
+       "      <th>weaptype1</th>\n",
+       "      <th>nkill</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   success  suicide  attacktype1  targtype1  weaptype1  nkill\n",
+       "0        1        0            1          2          5    3.0\n",
+       "3        1        0            1          2         13    1.0\n",
+       "4        0        0            1          2          5    0.0\n",
+       "5        1        0            1          7          5    1.0\n",
+       "6        1        0            1          8          5    3.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4c3fac8c-fbbe-4d2d-a4c1-12a86852d497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['eventid', 'iyear', 'imonth', 'iday', 'country_txt', 'region_txt',\n",
+       "       'provstate', 'city', 'latitude', 'longitude', 'success', 'suicide',\n",
+       "       'attacktype1', 'attacktype1_txt', 'targtype1', 'targtype1_txt', 'gname',\n",
+       "       'weaptype1', 'weaptype1_txt', 'nkill', 'nwound'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e79dfe6b-7ad7-4dfc-8f5c-a890fb9ac699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in df.columns:\n",
+    "    if column.endswith(\"_txt\"):\n",
+    "        df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8db76874-ee93-4157-bd39-2b753cb582a5",
    "metadata": {},
    "outputs": [
     {
@@ -154,151 +286,68 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>198311270001</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>11</td>\n",
-       "      <td>27</td>\n",
+       "      <th>1</th>\n",
+       "      <td>198001170007</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
        "      <td>Nigeria</td>\n",
        "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>6.618911</td>\n",
-       "      <td>3.305532</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>10.530204</td>\n",
+       "      <td>7.437338</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Assassination</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Government (General)</td>\n",
-       "      <td>Gang</td>\n",
-       "      <td>13</td>\n",
+       "      <td>9</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>198311290002</td>\n",
-       "      <td>1983</td>\n",
-       "      <td>11</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>6.455641</td>\n",
-       "      <td>3.429865</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Assassination</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Government (General)</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Firearms</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>198801230002</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>6.618911</td>\n",
-       "      <td>3.305532</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Assassination</td>\n",
        "      <td>7</td>\n",
        "      <td>Government (Diplomatic)</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Firearms</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>198803130003</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>3</td>\n",
+       "      <td>Zimbabwe Patriotic Front</td>\n",
        "      <td>13</td>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>Lagos</td>\n",
-       "      <td>6.618911</td>\n",
-       "      <td>3.305532</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Assassination</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Educational Institution</td>\n",
        "      <td>Unknown</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Firearms</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>2 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        eventid  iyear  imonth  iday country_txt          region_txt  \\\n",
        "0  197602130003   1976       2    13     Nigeria  Sub-Saharan Africa   \n",
-       "3  198311270001   1983      11    27     Nigeria  Sub-Saharan Africa   \n",
-       "4  198311290002   1983      11    29     Nigeria  Sub-Saharan Africa   \n",
-       "5  198801230002   1988       1    23     Nigeria  Sub-Saharan Africa   \n",
-       "6  198803130003   1988       3    13     Nigeria  Sub-Saharan Africa   \n",
+       "1  198001170007   1980       1    17     Nigeria  Sub-Saharan Africa   \n",
        "\n",
-       "  provstate   city  latitude  longitude  ...  suicide  attacktype1  \\\n",
-       "0     Lagos  Lagos  6.452331   3.419044  ...        0            1   \n",
-       "3     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
-       "4     Lagos  Lagos  6.455641   3.429865  ...        0            1   \n",
-       "5     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
-       "6     Lagos  Lagos  6.618911   3.305532  ...        0            1   \n",
+       "  provstate    city   latitude  longitude  ...  suicide  attacktype1  \\\n",
+       "0     Lagos   Lagos   6.452331   3.419044  ...        0            1   \n",
+       "1    Kaduna  Kaduna  10.530204   7.437338  ...        0            9   \n",
        "\n",
-       "   attacktype1_txt targtype1            targtype1_txt          gname  \\\n",
-       "0    Assassination         2     Government (General)  Coup plotters   \n",
-       "3    Assassination         2     Government (General)           Gang   \n",
-       "4    Assassination         2     Government (General)        Unknown   \n",
-       "5    Assassination         7  Government (Diplomatic)        Unknown   \n",
-       "6    Assassination         8  Educational Institution        Unknown   \n",
+       "   attacktype1_txt targtype1            targtype1_txt  \\\n",
+       "0    Assassination         2     Government (General)   \n",
+       "1          Unknown         7  Government (Diplomatic)   \n",
        "\n",
-       "  weaptype1  weaptype1_txt nkill  nwound  \n",
-       "0         5       Firearms   3.0     1.0  \n",
-       "3        13        Unknown   1.0     0.0  \n",
-       "4         5       Firearms   0.0     1.0  \n",
-       "5         5       Firearms   1.0     0.0  \n",
-       "6         5       Firearms   3.0     0.0  \n",
+       "                      gname weaptype1  weaptype1_txt nkill  nwound  \n",
+       "0             Coup plotters         5       Firearms   3.0     1.0  \n",
+       "1  Zimbabwe Patriotic Front        13        Unknown   NaN     NaN  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df = pd.read_excel(\"Nigeria_terrorist_data.xlsx\")\n",
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3fac8c-fbbe-4d2d-a4c1-12a86852d497",
+   "id": "ceec5f1f-c072-47ff-a8f0-580d4a635c85",
    "metadata": {},
    "outputs": [],
    "source": []
